Added api group to .env

--- a/cmd/.env
+++ b/cmd/.env
@@ -11,7 +11,8 @@ DB_NAME=MovieBase
 SERVER_PORT=8080
 
 
-
+// API Group configuration for the project
+API_GROUP=/api/v1
 
 
 // Twilio configuration for the project
