--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
+DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=9090
-DB_NAME=MovieBase
+DB_NAME=moviebase
 SERVER_PORT=8080
 
 
